# tecnoter.io

./: Gemfile  Makefile  README.md  ROADMAP.md  _config.yml  hugo.toml  index.markdown
.github/workflows/: hugo.yml
_posts/: 2023-12-15-welcome-to-jekyll.markdown
content/pages/: bio.md  contact.md  services.md  skills.md  stats.md  team.md  vision.md  who.md
content/posts/: hello-world.md  node-architecture.md  test.md
data/: site_content.toml
docs/: README.md  architecture.md  commands.md  development.md  fixes-summary.md  memory-hub-mode-fixes.md  usage.md
shell_wasm/: Cargo.toml
shell_wasm/src/: bbs.rs  completer.rs  fs.rs  lib.rs  shell.rs  state.rs  terminal.rs
shell_wasm/src/commands/: cat.rs  cd.rs  cowsay.rs  curl.rs  date.rs  fortune.rs  help.rs  ls.rs  man.rs  mod.rs  motd.rs  social.rs  top.rs  uptime.rs  weather.rs  who.rs  whoami.rs
themes/tecnoter.io/: theme.toml
themes/tecnoter.io/layouts/: index.html
themes/tecnoter.io/layouts/_default/: list.html  list.json  single.json
themes/tecnoter.io/layouts/partials/: extended_head.html  hardware.html  hub_frame.html  terminal_frame.html
themes/tecnoter.io/layouts/posts/: single.html
themes/tecnoter.io/static/css/: terminal.css
themes/tecnoter.io/static/js/: ansi.js  bbs.js  commands.js  fbui.js  helpers.js  listeners.js  system.js  terminal.js  ui.js
themes/tecnoterio/: theme.toml
themes/tecnoterio/layouts/: index.html  index.json  search.html
themes/tecnoterio/layouts/_default/: single.html
themes/tecnoterio/layouts/partials/: extended_head.html  hub_frame.html
(+8 files in other folders)
